2010-05-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Minor cosmetic fixes.

	* benchmarks/lib/benchmark.h: Whitespace.
	* benchmarks/mandel/mandel.c: Anonymize argument in `proccall'.

2010-05-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Code fixes in benchmarks.

	* benchmarks/fft/fft_extra.c (FFT_Reverse): avoid declaring `k'
	between `create' and `sync', this is now disallowed by the
	grammar.

	* benchmarks/livermore/kernel11.c: Fix syntax of initializer for
	argument `Xkml'.

2010-05-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Downscale the default lookup table for the FFT benchmark.

	* benchmarks/fft/Makefile.am,
	* benchmarks/fft/fft-bench.c: Reduce support to M=8 instead of
	16. This is needed since compilation times with `spr' skyrocket on
	large code.

2010-05-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update benchmarking framework to use the new target names.

	* build-aux/benchmarks.mk: Benchmark all `mta' targets.
	* benchmarks/lib/Makefile.am: Also build libraries for all the
	`mta' targets. Simplify directory names.

2010-05-31  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update programs to use the new framework.

	* benchmarks/lib/benchmark.h,
	* benchmarks/lib/benchmark.c: Update to use the new function
	pointer declaration syntax.

	* benchmarks/lib/benchmark.c,
	* benchmarks/mandel/mandel.c,
	* demo/sep.c: Ensure that `create'-to-pointer dereference the
	function pointer.

	* benchmarks/sha/sha1_alt.c: Include `delegate.h' to reach
	`PLACE_LOCAL'.

2010-04-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update copyright notice of files changed in 2010.

	* benchmarks/blas/blasbench.h,
	* benchmarks/fft/fft-bench.c,
	* benchmarks/lib/Makefile.am,
	* benchmarks/lib/benchmark.c,
	* benchmarks/livermore/kernel15.c,
	* benchmarks/livermore/kernel21.c,
	* benchmarks/livermore/kernel23.c,
	* benchmarks/livermore/kernel6.c,
	* benchmarks/livermore/kernel8.c,
	* benchmarks/livermore/kernel9.c,
	* benchmarks/mandel/Makefile.am,
	* benchmarks/mandel/mandel.c,